package Model;

public interface ISala {
    String obtenerId();
    int contarAsientosDisponibles();
    String getNombre(); 
}